syntax = "proto3";
package pb;
option go_package = "./;pb";

enum MsgId {
    None = 0;
    Echo = 1001;            // 透传
}

// ==========================================

message EchoRequest {
    string Message = 2;
}

message EchoResponse {
    string Message = 1;
}
